samples/_failures_safe/1761162365_c61266_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9adb8a30.c: In function ‘main’:
./samples/SAFE/__tmp_9adb8a30.c:151:28: error: expected ‘)’ at end of input
  151 |     if (scanf("%d", &edges)
      |        ~                   ^
      |                            )
./samples/SAFE/__tmp_9adb8a30.c:151:5: error: expected declaration or statement at end of input
  151 |     if (scanf("%d", &edges)
      |     ^~
